[package]
name = "hashmem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "*", features = ["derive" ] }
sha256 = "*"
bincode = { version = "2", features = ["serde"] }
log = "*"
env_logger = "*"
rand = "*"
redb = "2.1.0"
